# Brain-games

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
proskurenkodanylo_brain_games.egg-info/: PKG-INFO  SOURCES.txt
