[tool.poetry]
name = "proskurenkodanylo-brain-games"
version = "1.0.0"
description = ""
authors = ["proskurenko.danil0@gmali.com"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"
  brain-even = "brain_games.scripts.brain_even:main"
  brain-calc = "brain_games.scripts.brain_calc:main"
  brain-gcd = "brain_games.scripts.brain_gcd:main"
  brain-progression = "brain_games.scripts.brain_progression:main"
  brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

